[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Stage.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Cluster.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/WinArea.gd" type="Script" id=5]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 700, 700 )

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )

[node name="Cluster" parent="." instance=ExtResource( 4 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_mask = 7
format = 1
tile_data = PoolIntArray( -2162686, 0, 0, -2162685, 0, 0, -2162684, 0, 0, -2162683, 0, 0, -2162682, 0, 0, -2162601, 0, 0, -2162600, 0, 0, -2162599, 0, 0, -2162598, 0, 0, -2162597, 0, 0, -2162596, 0, 0, -2162595, 0, 0, -2097151, 0, 0, -2097150, 0, 0, -2097146, 0, 0, -2097145, 0, 0, -2097144, 0, 0, -2097143, 0, 0, -2097142, 0, 0, -2097141, 0, 0, -2097140, 0, 0, -2097139, 0, 0, -2097138, 0, 0, -2097137, 0, 0, -2097136, 0, 0, -2097135, 0, 0, -2097134, 0, 0, -2097133, 0, 0, -2097070, 0, 0, -2097069, 0, 0, -2097068, 0, 0, -2097067, 0, 0, -2097066, 0, 0, -2097065, 0, 0, -2097059, 0, 0, -2097058, 0, 0, -2097057, 0, 0, -2097056, 0, 0, -2097055, 0, 0, -2031615, 0, 0, -2031597, 0, 0, -2031596, 0, 0, -2031595, 0, 0, -2031594, 0, 0, -2031593, 0, 0, -2031592, 0, 0, -2031591, 0, 0, -2031536, 0, 0, -2031535, 0, 0, -2031534, 0, 0, -2031518, 0, 0, -2031517, 0, 0, -2031516, 0, 0, -2031515, 0, 0, -1966079, 0, 0, -1966055, 0, 0, -1966054, 0, 0, -1966053, 0, 0, -1966052, 0, 0, -1966051, 0, 0, -1966050, 0, 0, -1966049, 0, 0, -1966048, 0, 0, -1966002, 0, 0, -1966001, 0, 0, -1966000, 0, 0, -1965979, 0, 0, -1965978, 0, 0, -1965977, 0, 0, -1900543, 0, 0, -1900512, 0, 0, -1900511, 0, 0, -1900510, 0, 0, -1900509, 0, 0, -1900468, 0, 0, -1900467, 0, 0, -1900466, 0, 0, -1900440, 0, 0, -1900439, 0, 0, -1900438, 0, 0, -1835007, 0, 0, -1834973, 0, 0, -1834972, 0, 0, -1834971, 0, 0, -1834935, 0, 0, -1834934, 0, 0, -1834933, 0, 0, -1834932, 0, 0, -1834902, 0, 0, -1834901, 0, 0, -1834900, 0, 0, -1769471, 0, 0, -1769435, 0, 0, -1769434, 0, 0, -1769433, 0, 0, -1769432, 0, 0, -1769400, 0, 0, -1769399, 0, 0, -1769364, 0, 0, -1769363, 0, 0, -1703935, 0, 0, -1703897, 0, 0, -1703896, 0, 0, -1703866, 0, 0, -1703865, 0, 0, -1703864, 0, 0, -1703827, 0, 0, -1703826, 0, 0, -1638399, 0, 0, -1638361, 0, 0, -1638360, 0, 0, -1638359, 0, 0, -1638358, 0, 0, -1638357, 0, 0, -1638356, 0, 0, -1638355, 0, 0, -1638354, 0, 0, -1638353, 0, 0, -1638352, 0, 0, -1638351, 0, 0, -1638350, 0, 0, -1638331, 0, 0, -1638330, 0, 0, -1638290, 0, 0, -1638289, 0, 0, -1572863, 0, 0, -1572814, 0, 0, -1572813, 0, 0, -1572796, 0, 0, -1572795, 0, 0, -1572753, 0, 0, -1572752, 0, 0, -1507327, 0, 0, -1507277, 0, 0, -1507261, 0, 0, -1507260, 0, 0, -1507216, 0, 0, -1507215, 0, 0, -1441791, 0, 0, -1441741, 0, 0, -1441726, 0, 0, -1441725, 0, 0, -1441705, 0, 0, -1441679, 0, 0, -1441678, 0, 0, -1376256, 0, 0, -1376255, 0, 0, -1376205, 0, 0, -1376204, 0, 0, -1376190, 0, 0, -1376171, 0, 0, -1376170, 0, 0, -1376169, 0, 0, -1376168, 0, 0, -1376167, 0, 0, -1376166, 0, 0, -1376165, 0, 0, -1376164, 0, 0, -1376163, 0, 0, -1376162, 0, 0, -1376161, 0, 0, -1376142, 0, 0, -1376141, 0, 0, -1310720, 0, 0, -1310668, 0, 0, -1310655, 0, 0, -1310654, 0, 0, -1310637, 0, 0, -1310636, 0, 0, -1310625, 0, 0, -1310624, 0, 0, -1310623, 0, 0, -1310622, 0, 0, -1310621, 0, 0, -1310605, 0, 0, -1310604, 0, 0, -1310603, 0, 0, -1245184, 0, 0, -1245165, 0, 0, -1245164, 0, 0, -1245163, 0, 0, -1245162, 0, 0, -1245161, 0, 0, -1245160, 0, 0, -1245159, 0, 0, -1245158, 0, 0, -1245157, 0, 0, -1245132, 0, 0, -1245120, 0, 0, -1245119, 0, 0, -1245102, 0, 0, -1245085, 0, 0, -1245084, 0, 0, -1245067, 0, 0, -1245066, 0, 0, -1179648, 0, 0, -1179629, 0, 0, -1179621, 0, 0, -1179620, 0, 0, -1179619, 0, 0, -1179618, 0, 0, -1179596, 0, 0, -1179584, 0, 0, -1179567, 0, 0, -1179548, 0, 0, -1179547, 0, 0, -1179530, 0, 0, -1179529, 0, 0, -1179528, 0, 0, -1114112, 0, 0, -1114094, 0, 0, -1114093, 0, 0, -1114082, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1114060, 0, 0, -1114049, 0, 0, -1114048, 0, 0, -1114033, 0, 0, -1114032, 0, 0, -1114010, 0, 0, -1114009, 0, 0, -1113992, 0, 0, -1113991, 0, 0, -1113990, 0, 0, -1113935, 0, 0, -1113934, 0, 0, -1113933, 0, 0, -1113932, 0, 0, -1113931, 0, 0, -1113930, 0, 0, -1113929, 0, 0, -1113928, 0, 0, -1113927, 0, 0, -1113926, 0, 0, -1113925, 0, 0, -1113924, 0, 0, -1113923, 0, 0, -1113922, 0, 0, -1048576, 0, 0, -1048558, 0, 0, -1048545, 0, 0, -1048544, 0, 0, -1048543, 0, 0, -1048524, 0, 0, -1048513, 0, 0, -1048498, 0, 0, -1048497, 0, 0, -1048473, 0, 0, -1048453, 0, 0, -1048452, 0, 0, -1048451, 0, 0, -1048402, 0, 0, -1048401, 0, 0, -1048400, 0, 0, -1048399, 0, 0, -1048386, 0, 0, -1048385, 0, 0, -1048384, 0, 0, -1048383, 0, 0, -1048382, 0, 0, -1048381, 0, 0, -983040, 0, 0, -983039, 0, 0, -983022, 0, 0, -983008, 0, 0, -983007, 0, 0, -983006, 0, 0, -983005, 0, 0, -983004, 0, 0, -982988, 0, 0, -982977, 0, 0, -982962, 0, 0, -982937, 0, 0, -982936, 0, 0, -982915, 0, 0, -982914, 0, 0, -982913, 0, 0, -982912, 0, 0, -982869, 0, 0, -982868, 0, 0, -982867, 0, 0, -982866, 0, 0, -982845, 0, 0, -982844, 0, 0, -982843, 0, 0, -982842, 0, 0, -982841, 0, 0, -917503, 0, 0, -917486, 0, 0, -917468, 0, 0, -917452, 0, 0, -917442, 0, 0, -917441, 0, 0, -917427, 0, 0, -917400, 0, 0, -917399, 0, 0, -917376, 0, 0, -917375, 0, 0, -917374, 0, 0, -917373, 0, 0, -917337, 0, 0, -917336, 0, 0, -917335, 0, 0, -917334, 0, 0, -917333, 0, 0, -917305, 0, 0, -917304, 0, 0, -917303, 0, 0, -917302, 0, 0, -786443, 0, 0, -786442, 0, 0, -786441, 0, 0, -786440, 0, 0, -786439, 0, 0, -786438, 0, 0, -786437, 0, 0, -786436, 0, 0, -786435, 0, 0, -851967, 0, 0, -851950, 0, 0, -851932, 0, 0, -851916, 0, 0, -851906, 0, 0, -851892, 0, 0, -851891, 0, 0, -851863, 0, 0, -851862, 0, 0, -851837, 0, 0, -851836, 0, 0, -851835, 0, 0, -851805, 0, 0, -851804, 0, 0, -851803, 0, 0, -851802, 0, 0, -851801, 0, 0, -851766, 0, 0, -851765, 0, 0, -851764, 0, 0, -851763, 0, 0, -720910, 0, 0, -720909, 0, 0, -720908, 0, 0, -720907, 0, 0, -720906, 0, 0, -720900, 0, 0, -720899, 0, 0, -720898, 0, 0, -720897, 0, 0, -786432, 0, 0, -786431, 0, 0, -786414, 0, 0, -786396, 0, 0, -786395, 0, 0, -786381, 0, 0, -786380, 0, 0, -786370, 0, 0, -786357, 0, 0, -786356, 0, 0, -786326, 0, 0, -786325, 0, 0, -786299, 0, 0, -786298, 0, 0, -786297, 0, 0, -786296, 0, 0, -786295, 0, 0, -786294, 0, 0, -786293, 0, 0, -786292, 0, 0, -786291, 0, 0, -786290, 0, 0, -786289, 0, 0, -786288, 0, 0, -786287, 0, 0, -786286, 0, 0, -786275, 0, 0, -786274, 0, 0, -786273, 0, 0, -786272, 0, 0, -786271, 0, 0, -786270, 0, 0, -786269, 0, 0, -786228, 0, 0, -786227, 0, 0, -786226, 0, 0, -786225, 0, 0, -786224, 0, 0, -655375, 0, 0, -655374, 0, 0, -720878, 0, 0, -720859, 0, 0, -720858, 0, 0, -720845, 0, 0, -720834, 0, 0, -720821, 0, 0, -720789, 0, 0, -720788, 0, 0, -720751, 0, 0, -720750, 0, 0, -720749, 0, 0, -720748, 0, 0, -720747, 0, 0, -720746, 0, 0, -720745, 0, 0, -720744, 0, 0, -720743, 0, 0, -720742, 0, 0, -720741, 0, 0, -720740, 0, 0, -720688, 0, 0, -720687, 0, 0, -720686, 0, 0, -589839, 0, 0, -589838, 0, 0, -655342, 0, 0, -655322, 0, 0, -655309, 0, 0, -655298, 0, 0, -655285, 0, 0, -655252, 0, 0, -655251, 0, 0, -655215, 0, 0, -655150, 0, 0, -524304, 0, 0, -524303, 0, 0, -589806, 0, 0, -589786, 0, 0, -589785, 0, 0, -589773, 0, 0, -589762, 0, 0, -589750, 0, 0, -589715, 0, 0, -589714, 0, 0, -589615, 0, 0, -589614, 0, 0, -589613, 0, 0, -458768, 0, 0, -524270, 0, 0, -524249, 0, 0, -524237, 0, 0, -524226, 0, 0, -524214, 0, 0, -524178, 0, 0, -524177, 0, 0, -524077, 0, 0, -524076, 0, 0, -393232, 0, 0, -458735, 0, 0, -458734, 0, 0, -458714, 0, 0, -458713, 0, 0, -458701, 0, 0, -458690, 0, 0, -458678, 0, 0, -458641, 0, 0, -458640, 0, 0, -458540, 0, 0, -458539, 0, 0, -327696, 0, 0, -393199, 0, 0, -393179, 0, 0, -393178, 0, 0, -393165, 0, 0, -393154, 0, 0, -393142, 0, 0, -393103, 0, 0, -393102, 0, 0, -393003, 0, 0, -393002, 0, 0, -262160, 0, 0, -327663, 0, 0, -327643, 0, 0, -327629, 0, 0, -327628, 0, 0, -327618, 0, 0, -327606, 0, 0, -327566, 0, 0, -327565, 0, 0, -327466, 0, 0, -327465, 0, 0, -327464, 0, 0, -196624, 0, 0, -262127, 0, 0, -262108, 0, 0, -262107, 0, 0, -262093, 0, 0, -262082, 0, 0, -262070, 0, 0, -262029, 0, 0, -262028, 0, 0, -262027, 0, 0, -261929, 0, 0, -261928, 0, 0, -261927, 0, 0, -261926, 0, 0, -131088, 0, 0, -196591, 0, 0, -196572, 0, 0, -196571, 0, 0, -196557, 0, 0, -196546, 0, 0, -196534, 0, 0, -196491, 0, 0, -196490, 0, 0, -196489, 0, 0, -196390, 0, 0, -196389, 0, 0, -196388, 0, 0, -196387, 0, 0, -65552, 0, 0, -131055, 0, 0, -131054, 0, 0, -131036, 0, 0, -131021, 0, 0, -131010, 0, 0, -130998, 0, 0, -130953, 0, 0, -130952, 0, 0, -130851, 0, 0, -130850, 0, 0, -130849, 0, 0, -130848, 0, 0, -130847, 0, 0, -130846, 0, 0, -130845, 0, 0, -130844, 0, 0, -130843, 0, 0, -130842, 0, 0, -130841, 0, 0, -130840, 0, 0, -130839, 0, 0, -130838, 0, 0, -130837, 0, 0, -16, 0, 0, -65518, 0, 0, -65500, 0, 0, -65485, 0, 0, -65484, 0, 0, -65475, 0, 0, -65474, 0, 0, -65462, 0, 0, -65416, 0, 0, -65415, 0, 0, -65414, 0, 0, -65301, 0, 0, -65300, 0, 0, 65520, 0, 0, 18, 0, 0, 36, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 61, 0, 0, 74, 0, 0, 122, 0, 0, 123, 0, 0, 124, 0, 0, 236, 0, 0, 237, 0, 0, 131056, 0, 0, 65554, 0, 0, 65572, 0, 0, 65583, 0, 0, 65584, 0, 0, 65585, 0, 0, 65597, 0, 0, 65610, 0, 0, 65637, 0, 0, 65638, 0, 0, 65639, 0, 0, 65640, 0, 0, 65641, 0, 0, 65642, 0, 0, 65643, 0, 0, 65644, 0, 0, 65645, 0, 0, 65646, 0, 0, 65647, 0, 0, 65660, 0, 0, 65661, 0, 0, 65662, 0, 0, 65663, 0, 0, 65664, 0, 0, 65773, 0, 0, 196592, 0, 0, 131090, 0, 0, 131108, 0, 0, 131119, 0, 0, 131133, 0, 0, 131146, 0, 0, 131170, 0, 0, 131171, 0, 0, 131172, 0, 0, 131173, 0, 0, 131183, 0, 0, 131184, 0, 0, 131185, 0, 0, 131200, 0, 0, 131201, 0, 0, 131202, 0, 0, 131309, 0, 0, 262128, 0, 0, 262129, 0, 0, 196625, 0, 0, 196626, 0, 0, 196644, 0, 0, 196655, 0, 0, 196669, 0, 0, 196682, 0, 0, 196704, 0, 0, 196705, 0, 0, 196706, 0, 0, 196721, 0, 0, 196722, 0, 0, 196723, 0, 0, 196738, 0, 0, 196739, 0, 0, 196740, 0, 0, 196845, 0, 0, 196846, 0, 0, 327665, 0, 0, 262161, 0, 0, 262180, 0, 0, 262191, 0, 0, 262205, 0, 0, 262218, 0, 0, 262219, 0, 0, 262239, 0, 0, 262240, 0, 0, 262258, 0, 0, 262259, 0, 0, 262260, 0, 0, 262276, 0, 0, 262277, 0, 0, 262278, 0, 0, 262382, 0, 0, 393201, 0, 0, 327697, 0, 0, 327716, 0, 0, 327727, 0, 0, 327728, 0, 0, 327729, 0, 0, 327730, 0, 0, 327741, 0, 0, 327755, 0, 0, 327756, 0, 0, 327774, 0, 0, 327775, 0, 0, 327796, 0, 0, 327814, 0, 0, 327815, 0, 0, 327816, 0, 0, 327918, 0, 0, 458737, 0, 0, 458738, 0, 0, 393233, 0, 0, 393252, 0, 0, 393266, 0, 0, 393267, 0, 0, 393268, 0, 0, 393277, 0, 0, 393292, 0, 0, 393293, 0, 0, 393308, 0, 0, 393309, 0, 0, 393310, 0, 0, 393332, 0, 0, 393333, 0, 0, 393352, 0, 0, 393353, 0, 0, 393454, 0, 0, 524273, 0, 0, 524274, 0, 0, 458769, 0, 0, 458788, 0, 0, 458804, 0, 0, 458805, 0, 0, 458813, 0, 0, 458829, 0, 0, 458830, 0, 0, 458842, 0, 0, 458843, 0, 0, 458844, 0, 0, 458869, 0, 0, 458889, 0, 0, 458890, 0, 0, 458990, 0, 0, 589810, 0, 0, 589811, 0, 0, 524305, 0, 0, 524324, 0, 0, 524341, 0, 0, 524349, 0, 0, 524366, 0, 0, 524367, 0, 0, 524368, 0, 0, 524369, 0, 0, 524370, 0, 0, 524371, 0, 0, 524372, 0, 0, 524373, 0, 0, 524374, 0, 0, 524375, 0, 0, 524376, 0, 0, 524377, 0, 0, 524378, 0, 0, 524405, 0, 0, 524426, 0, 0, 524525, 0, 0, 524526, 0, 0, 655347, 0, 0, 655348, 0, 0, 589840, 0, 0, 589841, 0, 0, 589860, 0, 0, 589877, 0, 0, 589885, 0, 0, 589886, 0, 0, 589941, 0, 0, 589963, 0, 0, 590061, 0, 0, 720884, 0, 0, 720885, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655396, 0, 0, 655413, 0, 0, 655422, 0, 0, 655477, 0, 0, 655499, 0, 0, 655500, 0, 0, 655501, 0, 0, 655596, 0, 0, 655597, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720932, 0, 0, 720949, 0, 0, 720958, 0, 0, 721013, 0, 0, 721037, 0, 0, 721038, 0, 0, 721039, 0, 0, 721130, 0, 0, 721131, 0, 0, 721132, 0, 0, 786468, 0, 0, 786485, 0, 0, 786486, 0, 0, 786494, 0, 0, 786495, 0, 0, 786549, 0, 0, 786575, 0, 0, 786576, 0, 0, 786577, 0, 0, 786664, 0, 0, 786665, 0, 0, 786666, 0, 0, 852004, 0, 0, 852022, 0, 0, 852031, 0, 0, 852085, 0, 0, 852113, 0, 0, 852114, 0, 0, 852115, 0, 0, 852199, 0, 0, 852200, 0, 0, 917540, 0, 0, 917541, 0, 0, 917558, 0, 0, 917567, 0, 0, 917568, 0, 0, 917621, 0, 0, 917651, 0, 0, 917652, 0, 0, 917653, 0, 0, 917725, 0, 0, 917726, 0, 0, 917727, 0, 0, 917728, 0, 0, 917729, 0, 0, 917732, 0, 0, 917733, 0, 0, 917734, 0, 0, 917735, 0, 0, 983077, 0, 0, 983093, 0, 0, 983094, 0, 0, 983104, 0, 0, 983105, 0, 0, 983156, 0, 0, 983157, 0, 0, 983189, 0, 0, 983190, 0, 0, 983191, 0, 0, 983257, 0, 0, 983258, 0, 0, 983259, 0, 0, 983260, 0, 0, 983261, 0, 0, 983265, 0, 0, 983266, 0, 0, 983267, 0, 0, 983268, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048630, 0, 0, 1048641, 0, 0, 1048642, 0, 0, 1048692, 0, 0, 1048728, 0, 0, 1048729, 0, 0, 1048730, 0, 0, 1048731, 0, 0, 1048789, 0, 0, 1048790, 0, 0, 1048791, 0, 0, 1048792, 0, 0, 1048793, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114166, 0, 0, 1114178, 0, 0, 1114179, 0, 0, 1114215, 0, 0, 1114216, 0, 0, 1114227, 0, 0, 1114228, 0, 0, 1114267, 0, 0, 1114268, 0, 0, 1114269, 0, 0, 1114270, 0, 0, 1114323, 0, 0, 1114324, 0, 0, 1114325, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1179690, 0, 0, 1179702, 0, 0, 1179715, 0, 0, 1179716, 0, 0, 1179749, 0, 0, 1179750, 0, 0, 1179751, 0, 0, 1179752, 0, 0, 1179753, 0, 0, 1179754, 0, 0, 1179755, 0, 0, 1179761, 0, 0, 1179762, 0, 0, 1179763, 0, 0, 1179806, 0, 0, 1179807, 0, 0, 1179808, 0, 0, 1179857, 0, 0, 1179858, 0, 0, 1179859, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245238, 0, 0, 1245252, 0, 0, 1245253, 0, 0, 1245254, 0, 0, 1245283, 0, 0, 1245284, 0, 0, 1245291, 0, 0, 1245297, 0, 0, 1245344, 0, 0, 1245345, 0, 0, 1245346, 0, 0, 1245392, 0, 0, 1245393, 0, 0, 1310763, 0, 0, 1310774, 0, 0, 1310790, 0, 0, 1310791, 0, 0, 1310818, 0, 0, 1310819, 0, 0, 1310827, 0, 0, 1310833, 0, 0, 1310882, 0, 0, 1310883, 0, 0, 1310884, 0, 0, 1310885, 0, 0, 1310926, 0, 0, 1310927, 0, 0, 1310928, 0, 0, 1310929, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376310, 0, 0, 1376327, 0, 0, 1376328, 0, 0, 1376329, 0, 0, 1376330, 0, 0, 1376353, 0, 0, 1376354, 0, 0, 1376363, 0, 0, 1376369, 0, 0, 1376421, 0, 0, 1376422, 0, 0, 1376423, 0, 0, 1376424, 0, 0, 1376452, 0, 0, 1376453, 0, 0, 1376454, 0, 0, 1376455, 0, 0, 1376456, 0, 0, 1376457, 0, 0, 1376458, 0, 0, 1376459, 0, 0, 1376460, 0, 0, 1376461, 0, 0, 1376462, 0, 0, 1441831, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1441845, 0, 0, 1441846, 0, 0, 1441866, 0, 0, 1441867, 0, 0, 1441868, 0, 0, 1441873, 0, 0, 1441874, 0, 0, 1441875, 0, 0, 1441886, 0, 0, 1441887, 0, 0, 1441888, 0, 0, 1441889, 0, 0, 1441899, 0, 0, 1441905, 0, 0, 1441960, 0, 0, 1441961, 0, 0, 1441962, 0, 0, 1441963, 0, 0, 1441964, 0, 0, 1441965, 0, 0, 1441985, 0, 0, 1441986, 0, 0, 1441987, 0, 0, 1441988, 0, 0, 1441991, 0, 0, 1441992, 0, 0, 1441993, 0, 0, 1441994, 0, 0, 1441995, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507381, 0, 0, 1507404, 0, 0, 1507405, 0, 0, 1507406, 0, 0, 1507407, 0, 0, 1507408, 0, 0, 1507409, 0, 0, 1507411, 0, 0, 1507412, 0, 0, 1507413, 0, 0, 1507414, 0, 0, 1507415, 0, 0, 1507416, 0, 0, 1507417, 0, 0, 1507418, 0, 0, 1507419, 0, 0, 1507420, 0, 0, 1507421, 0, 0, 1507422, 0, 0, 1507435, 0, 0, 1507441, 0, 0, 1507501, 0, 0, 1507502, 0, 0, 1507503, 0, 0, 1507504, 0, 0, 1507505, 0, 0, 1507506, 0, 0, 1507507, 0, 0, 1507508, 0, 0, 1507509, 0, 0, 1507510, 0, 0, 1507511, 0, 0, 1507512, 0, 0, 1507513, 0, 0, 1507514, 0, 0, 1507515, 0, 0, 1507516, 0, 0, 1507517, 0, 0, 1507518, 0, 0, 1507519, 0, 0, 1507520, 0, 0, 1507521, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572917, 0, 0, 1572971, 0, 0, 1572977, 0, 0, 1638437, 0, 0, 1638453, 0, 0, 1638507, 0, 0, 1638513, 0, 0, 1703973, 0, 0, 1703989, 0, 0, 1703990, 0, 0, 1704043, 0, 0, 1704049, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769526, 0, 0, 1769527, 0, 0, 1769579, 0, 0, 1769585, 0, 0, 1835044, 0, 0, 1835063, 0, 0, 1835064, 0, 0, 1835065, 0, 0, 1835066, 0, 0, 1835073, 0, 0, 1835114, 0, 0, 1835115, 0, 0, 1835121, 0, 0, 1835122, 0, 0, 1900580, 0, 0, 1900602, 0, 0, 1900603, 0, 0, 1900604, 0, 0, 1900605, 0, 0, 1900606, 0, 0, 1900607, 0, 0, 1900608, 0, 0, 1900609, 0, 0, 1900610, 0, 0, 1900611, 0, 0, 1900612, 0, 0, 1900613, 0, 0, 1900614, 0, 0, 1900615, 0, 0, 1900616, 0, 0, 1900617, 0, 0, 1900618, 0, 0, 1900626, 0, 0, 1900627, 0, 0, 1900628, 0, 0, 1900629, 0, 0, 1900630, 0, 0, 1900631, 0, 0, 1900632, 0, 0, 1900633, 0, 0, 1900634, 0, 0, 1900635, 0, 0, 1900636, 0, 0, 1900637, 0, 0, 1900638, 0, 0, 1900639, 0, 0, 1900640, 0, 0, 1900641, 0, 0, 1900642, 0, 0, 1900643, 0, 0, 1900644, 0, 0, 1900645, 0, 0, 1900646, 0, 0, 1900647, 0, 0, 1900648, 0, 0, 1900649, 0, 0, 1900650, 0, 0, 1900658, 0, 0, 1966116, 0, 0, 1966153, 0, 0, 1966154, 0, 0, 1966155, 0, 0, 1966156, 0, 0, 1966157, 0, 0, 1966158, 0, 0, 1966159, 0, 0, 1966160, 0, 0, 1966161, 0, 0, 1966162, 0, 0, 1966163, 0, 0, 1966164, 0, 0, 1966185, 0, 0, 1966194, 0, 0, 2031652, 0, 0, 2031730, 0, 0, 2097188, 0, 0, 2097266, 0, 0, 2162724, 0, 0, 2162725, 0, 0, 2162802, 0, 0, 2228261, 0, 0, 2228262, 0, 0, 2228338, 0, 0, 2293798, 0, 0, 2293874, 0, 0, 2359334, 0, 0, 2359335, 0, 0, 2359409, 0, 0, 2359410, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424945, 0, 0, 2490408, 0, 0, 2490409, 0, 0, 2490410, 0, 0, 2490411, 0, 0, 2490481, 0, 0, 2555947, 0, 0, 2555948, 0, 0, 2555949, 0, 0, 2555950, 0, 0, 2556017, 0, 0, 2621487, 0, 0, 2621488, 0, 0, 2621489, 0, 0, 2621490, 0, 0, 2621491, 0, 0, 2621492, 0, 0, 2621493, 0, 0, 2621552, 0, 0, 2621553, 0, 0, 2687029, 0, 0, 2687030, 0, 0, 2687031, 0, 0, 2687032, 0, 0, 2687033, 0, 0, 2687034, 0, 0, 2687035, 0, 0, 2687036, 0, 0, 2687038, 0, 0, 2687039, 0, 0, 2687040, 0, 0, 2687041, 0, 0, 2687042, 0, 0, 2687043, 0, 0, 2687044, 0, 0, 2687045, 0, 0, 2687046, 0, 0, 2687047, 0, 0, 2687048, 0, 0, 2687049, 0, 0, 2687070, 0, 0, 2687071, 0, 0, 2687072, 0, 0, 2687073, 0, 0, 2687074, 0, 0, 2687075, 0, 0, 2687076, 0, 0, 2687077, 0, 0, 2687078, 0, 0, 2687079, 0, 0, 2687080, 0, 0, 2687081, 0, 0, 2687082, 0, 0, 2687083, 0, 0, 2687084, 0, 0, 2687085, 0, 0, 2687087, 0, 0, 2687088, 0, 0, 2752572, 0, 0, 2752573, 0, 0, 2752574, 0, 0, 2752575, 0, 0, 2752576, 0, 0, 2752577, 0, 0, 2752578, 0, 0, 2752585, 0, 0, 2752586, 0, 0, 2752587, 0, 0, 2752588, 0, 0, 2752589, 0, 0, 2752590, 0, 0, 2752591, 0, 0, 2752592, 0, 0, 2752593, 0, 0, 2752594, 0, 0, 2752595, 0, 0, 2752596, 0, 0, 2752597, 0, 0, 2752598, 0, 0, 2752599, 0, 0, 2752600, 0, 0, 2752601, 0, 0, 2752602, 0, 0, 2752603, 0, 0, 2752604, 0, 0, 2752605, 0, 0, 2752606, 0, 0, 2752621, 0, 0, 2752622, 0, 0, 2752623, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
process_mode = 0

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="WinArea" type="Area2D" parent="." groups=["WinArea"]]
position = Vector2( -1045, -63 )
collision_layer = 16
collision_mask = 10
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
shape = SubResource( 3 )

[node name="WinTimer" type="Timer" parent="WinArea"]
one_shot = true

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 200 )

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 13660, 828 )

[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="body_entered" from="WinArea" to="WinArea" method="_on_WinArea_body_entered"]
[connection signal="timeout" from="WinArea/WinTimer" to="." method="_on_WinTimer_timeout"]
